--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -183,3 +183,15 @@ div.essential_audio > div:nth-child(3) {
     padding-top: 18px;
     padding-right: 10px;
     }
+div.essential_audio>div:nth-child(1) div {
+    background-color: @primary-color !important;
+    }
+div.essential_audio>div:nth-child(1) div.play {
+    background-color: @primary-color !important;
+    }
+ div.essential_audio>div:nth-child(2):after {
+    background-color: @control-color !important;  
+    }
+div.essential_audio>div:nth-child(2) div {
+    background-color: @control-color !important;
+    }
