--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -183,3 +183,8 @@ div.essential_audio > div:nth-child(3) {
     padding-top: 18px;
     padding-right: 10px;
     }
+.no_js a {
+	text-decoration: none;
+	border: none;
+	font-size: 30px;
+}
